# rokim_todo

.github/workflows/: build_test.yml  push_image.yml
rokim_todo/: Cargo.toml  Dockerfile  generate_angular_client.sh
rokim_todo/src/: db_client.rs  main.rs  openapi.rs  todo_controller.rs
rokim_todo_ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
rokim_todo_ui/src/: index.html
rokim_todo_ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  redirect-302.interceptor.spec.ts  redirect-302.interceptor.ts
rokim_todo_ui/src/app/services/todo/: README.md
rokim_todo_ui/src/app/services/todo/.openapi-generator/: FILES
rokim_todo_ui/src/app/services/todo/api/: todoController.service.ts
rokim_todo_ui/src/app/services/todo/model/: createTodoRequest.ts  models.ts  todo.ts
rokim_todo_ui/src/app/todo-list/: dialog-overview-example-dialog.html  todo-list.component.css  todo-list.component.html  todo-list.component.ts
