[package]
name = "rokim_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
env_logger = "0.9.0"
clap = { version = "4.4.18", features = ["derive"] }
